--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,12 +3,22 @@
     {% include head.html %}
     
     <body>
-      <div>⟡ Carter Duong</div>
-      <div>
-        Carter Duong is a designer, developer, and artist from 
-        the Bay Area and (soon to be) based in Los Angeles. 
-        He recently graduated from UC San Diego with a B.A. 
-        in Interdisciplinary Computing and the Arts.
+      <div class="landing">
+        <div class="name">⟡ Carter Duong</div>
+        <div class="image-container">
+          <img src="assets/img/rectangle.svg">
+        </div>
+        <div class="text-container">
+          <div class="title">
+            INFO
+          </div>
+          <div class="description-container">
+              Carter Duong is a designer, developer, and artist from 
+              the Bay Area and (soon to be) based in Los Angeles. 
+              He recently graduated from UC San Diego with a B.A. 
+              in Interdisciplinary Computing and the Arts.          
+          </div>
+        </div>
       </div>
     
     {% include projects.html %}
