--- a/_scss/_type.scss
+++ b/_scss/_type.scss
@@ -5,8 +5,8 @@ html {
 }
 
 .title {
-  font-size: 13px;
-  font-weight: 500;
+  font-size: 1.8rem;
+  letter-spacing: -0.1rem;
   text-transform: uppercase;
 }
 .description-container {
@@ -19,5 +19,5 @@ html {
 }
 
 .name {
-  font-size: 22px;
+  font-size: 1.8rem;
 }
