--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,16 +9,23 @@
           <img src="assets/img/rectangle.svg">
         </div>
         <div class="text-container">
-          <div class="title">
+          <span class="title">
             INFO
-          </div>
-          <div class="description-container">
+          </span>
+          <p class="description-container">
               Carter Duong is a designer, developer, and artist from 
               the Bay Area and (soon to be) based in Los Angeles. 
               He recently graduated from UC San Diego with a B.A. 
-              in Interdisciplinary Computing and the Arts.          
-          </div>
+              in Interdisciplinary Computing and the Arts.
+              <br><br>
+              EMAIL
+              <br>
+              ARE.NA
+              <br>
+              TUMBLR   
+          </p>
         </div>
+        <div class="vertical-line"></div>
       </div>
     
     {% include projects.html %}
