--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,6 +1,16 @@
 html {
   color: white;
   background-color: black;
+  font-size: 16px;
+}
+
+.vertical-line{
+  border-left: 0.1rem solid grey;
+  width: .2rem; /* Use only border style */
+  height: 10vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .image-container {
@@ -8,7 +18,7 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-bottom: 10vh;
+  margin-bottom: 5vh;
 
   img {
       max-width: 65%;
@@ -37,9 +47,14 @@ html {
   padding: 2vh 0 2vh 2vh;
 }
 
+.project {
+  margin: 0 0 10vh 0;
+}
+
 .text-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  text-align: center;
   padding: 0 8vw 0 9vw;
 }
 
