--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -4,13 +4,15 @@ html {
   font-size: 16px;
 }
 
+p {
+  margin: 1rem 0 0 0;
+}
 .vertical-line{
   border-left: 0.1rem solid grey;
   width: .2rem; /* Use only border style */
   height: 10vh;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 3rem auto;
 }
 
 .image-container {
@@ -18,14 +20,14 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-bottom: 5vh;
+  margin-bottom: 2rem;
 
   img {
       max-width: 65%;
       height: auto;
   
       &:not(:last-child) {
-          margin-bottom: 5vh;
+          margin-bottom: 1rem;
       }
   }
 
@@ -48,14 +50,15 @@ html {
 }
 
 .project {
-  margin: 0 0 10vh 0;
 }
 
 .text-container {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  margin-bottom: 2rem;
   padding: 0 8vw 0 9vw;
+  text-align: center;
+
 }
 
 .title {
