--- a/_scss/_type.scss
+++ b/_scss/_type.scss
@@ -5,7 +5,7 @@ html {
 }
 
 .title {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   letter-spacing: -0.1rem;
   text-transform: uppercase;
 }
@@ -20,4 +20,5 @@ html {
 
 .name {
   font-size: 1.8rem;
+  letter-spacing: -0.1rem;
 }
