--- a/_includes/js.html
+++ b/_includes/js.html
@@ -6,3 +6,4 @@
 <script src="assets/js/renderers/CanvasRenderer.js"></script>
 <script src="assets/js/stats.min.js"></script>
 <script src="assets/js/nurbs2.js"></script>
+<script src="assets/js/loop.js"></script>
