--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,22 +11,24 @@
   </div>
 
   <div class="text-container">
-    <span class="title">
+    <h1 class="title-text">
         {{project.title}}
-    </span>
+    </h1>
       
-    <span class="description-container">
-      <p class="meta-text">
+    <p class="meta-text">
+      {%if project.role %}
         {{project.role}}
         <br>
+      {%endif%}
+      {%if project.date %}
         {{project.date}}
         <br>
-        {{project.collaborators}}
-      </p>
-      <p class="description-text">
-        {{project.description}}
-      </p>
-    </span>
+      {%endif%}
+      {{project.collaborators}}
+    </p>
+    <p class="description-text">
+      {{project.description}}
+    </p>
   </div>
 
   <div class="vertical-line"></div>
