--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -23,16 +23,17 @@ p {
 #accordion {
   margin:100px auto;
   padding:0;
-  width:500px;
-  }    
+  width:22vw;
+}    
+
 #accordion li {
   list-style:none;
   width:100%;
-  }    
+}    
+
 #accordion li label {
   display:block;
-
-  }    
+}    
 /* Hide the radio buttons */
 #accordion label + input[type='radio'] {
   display: none;    
@@ -40,13 +41,20 @@ p {
 
 /* hide content by default */
 #accordion .content {
-  display:none;
+  max-height: 0;
+  -webkit-transition: max-height 1s linear,
+                      opacity 1s; /* Safari */
+  overflow: hidden;
+  opacity: 0;
 }
 
 /* Show content boxes when the radio buttons are checked */
 #accordion label + input[type='radio']:checked + .content {
-  display:block;
-  -webkit-transition: width 2s; /* Safari */
+  height: auto;
+  max-height: 280px;
+  -webkit-transition: max-height 1s linear,
+                      opacity 1s; /* Safari */
+  opacity: 1;
 
 }
 
