--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,6 @@
-<script src="assets/js/main.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="assets/js/accordion.js"></script>
+<!--
 <script src="assets/js/build/three.js"></script>
 <script src="assets/js/curves/NURBSCurve.js"></script>
 <script src="assets/js/curves/NURBSUtils.js"></script>
@@ -7,3 +9,4 @@
 <script src="assets/js/stats.min.js"></script>
 <script src="assets/js/nurbs2.js"></script>
 <script src="assets/js/loop.js"></script>
+-->
