--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,7 +16,7 @@
           </h1>
           <p class="description-container">
             Carter Duong is a designer, developer, and artist from 
-            the Bay Area and (soon to be) based in Los Angeles. 
+            the Bay Area (510 + 925) and based in Los Angeles (626). 
             He recently graduated from UC San Diego with a B.A. 
             in Interdisciplinary Computing and the Arts.
             <br><br>
@@ -59,6 +59,7 @@
             </p>
           </div>
         </div>
+        
         
       {% include js.html %}
     </body>
