--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -6,12 +6,12 @@
     <input type="radio" name="accordion" id="info" data-collapsed="true" checked>
     <div class="content">
       Carter Duong is a designer, developer, and artist from 
-      the Bay Area (510 + 925) and based in Los Angeles (626). 
-      He recently graduated from UC San Diego with a B.A. 
-      in Interdisciplinary Computing and the Arts.<br><br>
+      the Bay Area<sup><a href>1</a>+<a href>2</a></sup> and based in Los Angeles<sup><a href>3</a></sup>. 
+      He recently graduated from UC San Diego<sup><a href>4</a></sup> with a B.A. 
+      in Interdisciplinary Computing and the Arts<sup><a href>5</a></sup>.<br><br>
       <a>EMAIL</a><br>
       <a>ARE.NA</a><br>
-      <a>TUMBLR</a>
+      <a>TUMBLR</a><br><br>
     </div>
   </li>
 
@@ -36,7 +36,6 @@
             {{project.description}}
           </p>
           <br>
-        </p>
     </div>
   </li>
   {% endfor %}
