--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,37 +1,62 @@
-{% for project in site.data.projects %}
-<div class="project">
+<div class="projects-container">
+  <div class="project" id="landing">
+      <div class="image-container">
+        <img src="assets/img/squiggle.png">
+      </div>
+      <div class="text-container">
+        <h1 class="title">
+          INFO
+        </h1>
+        <p class="description-container">
+          Carter Duong is a designer, developer, and artist from 
+          the Bay Area <sup>(510 + 925)</sup> and based in Los Angeles (626). 
+          He recently graduated from UC San Diego with a B.A. 
+          in Interdisciplinary Computing and the Arts.
+          <br><br>
+          EMAIL
+          <br>
+          ARE.NA
+          <br>
+          TUMBLR   
+        </p>
+      </div>
 
-  <div class="image-container">
-      {% for image in project.images %}
-        <img src="{{image}}">
-      {% endfor %}
-      {% for gif in project.gifs %}
-        <video src="{{gif}}" autoplay muted loop></video>
-      {% endfor %}
+      <div class="vertical-line"></div>
+    </div>
+
+  {% for project in site.data.projects %}
+  <div class="project">
+
+    <div class="image-container">
+        {% for image in project.images %}
+          <img src="{{image}}">
+        {% endfor %}
+        {% for gif in project.gifs %}
+          <video src="{{gif}}" autoplay muted loop></video>
+        {% endfor %}
+    </div>
+
+    <div class="text-container">
+      <h1 class="title-text">
+          {{project.title}}
+      </h1>
+        
+      <p class="meta-text">
+        {%if project.role %}
+          {{project.role}}
+          <br>
+        {%endif%}
+        {%if project.date %}
+          {{project.date}}
+          <br>
+        {%endif%}
+        {{project.collaborators}}
+      </p>
+      <p class="description-text">
+        {{project.description}}
+      </p>
+    </div>
+    <div class="vertical-line"></div>
   </div>
-
-  <div class="text-container">
-    <h1 class="title-text">
-        {{project.title}}
-    </h1>
-      
-    <p class="meta-text">
-      {%if project.role %}
-        {{project.role}}
-        <br>
-      {%endif%}
-      {%if project.date %}
-        {{project.date}}
-        <br>
-      {%endif%}
-      {{project.collaborators}}
-    </p>
-    <p class="description-text">
-      {{project.description}}
-    </p>
-  </div>
-
-  <div class="vertical-line"></div>
-
+  {% endfor %}
 </div>
-{% endfor %}
