--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,3 +1,5 @@
+<script src="assets/js/main.js"></script>
+
 <!--
 <script src="assets/js/build/three.js"></script>
 <script src="assets/js/curves/NURBSCurve.js"></script>
@@ -6,5 +8,4 @@
 <script src="assets/js/renderers/CanvasRenderer.js"></script>
 <script src="assets/js/stats.min.js"></script>
 <script src="assets/js/nurbs2.js"></script>
-<script src="assets/js/loop.js"></script>
 -->
