--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
-    <body class="fadeIn">
+    <body class="">
       <div class="folio" id="header">⟡ Carter Duong</div>
       <div class="folio" id="contact">Contact</div>
       <div class="folio" id="time">Published 1/22/19</div>
