--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -39,7 +39,7 @@ a {
   display:block;
 }    
 
-/* hide content by default */
+// hide content by default
 #accordion .content {
   max-height: 0;
   -webkit-transition: max-height 1s linear,
@@ -48,29 +48,37 @@ a {
   opacity: 0;
 }
 
-/* Hide the radio buttons */
-#accordion label + input[type='radio'] {
+// hide radio button
+#accordion input[type='radio'] {
   display: none;    
 }    
 
-/* Show content boxes when the radio buttons are checked */
-#accordion label + input[type='radio']:checked + .content {
+// pulse active label
+#accordion input[type='radio']:checked + label {
+  animation: pulse 2s infinite;
+}    
+
+// expand active content
+#accordion input[type='radio']:checked ~ .content {
   height: auto;
   max-height: 280px;
   -webkit-transition: max-height 1s linear,
                       opacity 1s; /* Safari */
   opacity: 1;
-}
+}   
 
 @keyframes pulse {
   0% {
     opacity: 0;
+    text-shadow: 0px 0px 5px white;
   }
   50% {
     opacity: 1;
+    text-shadow: 0x 0px 5px white;
   }
   100% {
     opacity: 0;
+    text-shadow: 0px 0px 5px white;
   }
 }
 
