--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -1,8 +1,8 @@
-<ul class="accordion desktop" id="accordion">
+<ul class="accordion desktop">
 
   <!-- Landing -->
   <li>
-    <input type="radio" name="accordion" id="info">
+    <input type="radio" name="projects-menu" id="info">
     <label for="info">Info</label>
     <div class="content">
       Carter Duong is a designer, developer, and artist from 
@@ -14,33 +14,14 @@
       <a>TUMBLR</a><br><br>
     </div>
   </li>
-
-  <li>
-    <input type="radio" name="accordion" id="test">
-    <label for="test">Test</label>
-    <div class="content">
-      <p class="description-container">
-          Carter Duong is a designer, developer, and artist from 
-          the Bay Area <sup>(510 + 925)</sup> and based in Los Angeles (626). 
-          He recently graduated from UC San Diego with a B.A. 
-          in Interdisciplinary Computing and the Arts.
-          <br><br>
-          EMAIL
-          <br>
-          ARE.NA
-          <br>
-          TUMBLR   
-        </p>
-    </div>
-  </li>
-
+  
   <!-- Projects -->
   {% for project in site.data.projects %}
   <li>
-    <input type="radio" name="accordion" id="{{project.title}}">
+    <input type="radio" name="projects-menu" id="{{project.title}}">
     <label for="{{project.title}}">{{project.title}}</label>
     <div class="content">
-        <p class="meta-text sub-menu">
+        <p class="meta-text">
             {%if project.role %}
               {{project.role}}
               <br>
@@ -51,11 +32,12 @@
             {%endif%}
             {{project.collaborators}}
           </p>
-          <p class="description-text sub-menu">
+          <p class="description-text">
             {{project.description}}
           </p>
           <br>
     </div>
   </li>
   {% endfor %}
+
 </ul>
