--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,13 +1,12 @@
 <div class="projects-container">
-  <div class="project" id="landing">
+
+  <!-- Landing -->
+  <div class="project INFO" id="landing">
       <div class="image-container">
         <img src="assets/img/squiggle.png">
       </div>
       <div class="text-container">
-        <h1 class="title">
-          INFO
-        </h1>
-        
+        <h1 class="title">INFO</h1>
         <p class="description-container">
           Carter Duong is a designer, developer, and artist from 
           the Bay Area <sup>(510 + 925)</sup> and based in Los Angeles (626). 
@@ -21,13 +20,12 @@
           TUMBLR   
         </p>
       </div>
-
       <div class="vertical-line"></div>
     </div>
 
+  <!-- Projects -->
   {% for project in site.data.projects %}
-  <div class="project">
-
+  <div class="project {{project.title}}" id="{{forloop.index}}">
     <div class="image-container">
         {% for image in project.images %}
           <img src="{{image}}">
@@ -36,12 +34,8 @@
           <video src="{{gif}}" autoplay muted loop></video>
         {% endfor %}
     </div>
-
     <div class="text-container">
-      <h1 class="title-text">
-        {{project.title}}
-      </h1>
-        
+      <h1 class="title-text">{{project.title}}</h1>
       <p class="meta-text">
         {%if project.role %}
           {{project.role}}
@@ -60,4 +54,5 @@
     <div class="vertical-line"></div>
   </div>
   {% endfor %}
+
 </div>
