--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -131,6 +131,12 @@ a {
   -webkit-opacity: 1.0;
 }
 
+.fadeOut {
+  -webkit-animation: opacityUp 1s reverse;
+  opacity: 1.0;
+  -webkit-opacity: 1.0;
+}
+
 @-webkit-keyframes opacityUp {
   0% { 
       opacity: 0.0;
