Add basic webGL sketch

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
   <!-- Landing -->
   <div class="project INFO" id="landing">
       <div class="image-container">
-        <img src="assets/img/squiggle.png">
+          <div id="canvas-container"></div>
       </div>
       <div class="text-container">
         <h1 class="title">INFO</h1>
