--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,5 +1,8 @@
 $break-medium: 600px;
 
+$white: #FFFFFF;
+$grey: #A9A9A9;
+
 html {
   color: white;
   background-color: black;
@@ -24,11 +27,18 @@ a {
 }
 
 /**** Accordion ****/
+
 .accordion {
-  top: 35vh;
-  padding: 0 1vw 0 1vw;
-  width: 17vw;
-}    
+  display: none;
+
+  @media screen and (min-width: $break-medium) {
+    display: inline-block;
+    position: fixed;
+    padding: 8vh 0 0 1vw;
+    width: 15vw;
+    top: 35vh;
+  }
+}
 
 .accordion li {
   list-style:none;
@@ -39,8 +49,12 @@ a {
 }    
 
 .accordion li label {
-  display:block;
-}    
+  color: $grey;
+}
+
+.accordion li label:hover {
+  cursor: pointer;
+}
 
 // hide content by default
 .accordion .content {
@@ -54,11 +68,12 @@ a {
 // hide radio button
 .accordion input[type='radio'] {
   display: none;    
-}    
+}
 
 // pulse active label
 .accordion input[type='radio']:checked + label {
   animation: pulse 3s infinite;
+  color: $white;
 } 
 
 // expand active content
@@ -68,11 +83,12 @@ a {
   -webkit-transition: max-height 1s linear,
                       opacity 1s; /* Safari */
   opacity: 1;
+  color: $white;
 }   
 
 @keyframes pulse {
   0% {
-    opacity: 0;
+    opacity: .3;
     text-shadow: 0px 0px 5px white;
   }
   50% {
@@ -80,7 +96,7 @@ a {
     text-shadow: 0x 0px 5px white;
   }
   100% {
-    opacity: 0;
+    opacity: .3;
     text-shadow: 0px 0px 5px white;
   }
 }
@@ -102,11 +118,13 @@ a {
   &#time {
     left: 1vw;
     bottom: 1vh;
+    color: $grey;
   }
 
   &#easter-egg {
     right: 1vw;
     bottom: 1vh;
+    color: $grey;
   }
 }
 
@@ -128,6 +146,7 @@ a {
   #landing {
     display: flex;
     height: 100vh;
+    width: 50vw;
   }
 }
 
@@ -185,11 +204,11 @@ a {
       margin-bottom: 2vh;
     }   
   }
-}
 
-#canvas-container {
-  width: 500px;
-  height: 500px;
+  #canvas-container {
+    width: 50vw;
+    height: 50vh;
+  } 
 }
 
 /**** Text ****/
@@ -220,20 +239,5 @@ a {
 
   @media screen and (min-width: $break-medium) {
     display: none;
-  }
-}
-
-.accordion {
-  display: none;
-
-  @media screen and (min-width: $break-medium) {
-    display: inline;
-    .text-container.desktop {
-      display: inline;
-
-    }
-    position: fixed;
-    padding: 8vh 0 0 1vw;
-    width: 15vw;
   }
 }
