--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,8 +3,8 @@
     {% include head.html %}
     <body class="">
       <div class="folio" id="header">⟡ Carter Duong</div>
-      <div class="folio" id="contact">Contact</div>
-      <div class="folio" id="time">Published 1/22/19</div>
+      <div class="folio" id="contact"><a href="mailto:c@carterduong.com">Contact</a></div>
+      <div class="folio" id="time">Updated 1/22/19</div>
       <div class="folio" id="easter-egg">All ways, always.</div>
 
       {% include accordion.html %}
