Add google coords

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
         <h1 class="title">INFO</h1>
         <p class="description-container">
           Carter Duong is a designer, developer, and artist from 
-          the Bay Area <sup>(510 + 925)</sup> and based in Los Angeles (626). 
+          the Bay Area <sup>(510 + 925)</sup> and based near Los Angeles (626). 
           He recently graduated from UC San Diego with a B.A. 
           in Interdisciplinary Computing and the Arts.
           <br><br>
