--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -6,9 +6,10 @@
     <label for="info">Info</label>
     <div class="content">
       Carter Duong is a designer, developer, and artist from 
-      the Bay Area<sup><a href>1</a>+<a href>2</a></sup> and based in Los Angeles<sup><a href>3</a></sup>. 
-      He recently graduated from UC San Diego<sup><a href>4</a></sup> with a B.A. 
-      in Interdisciplinary Computing and the Arts<sup><a href>5</a></sup>.<br><br>
+        the Bay Area<sup><a href="https://goo.gl/maps/cKExn6muhyq" target="_blank">1</a>+<a href="https://goo.gl/maps/VHi9HtWjcHs" target="_blank">2</a></sup> 
+        and based near Los Angeles<sup><a href="https://goo.gl/maps/NrSy197bgj22" target="_blank">3</a></sup>. He recently graduated from UC San Diego<sup><a href="https://goo.gl/maps/c4LcBHj2JUu" target="_blank">4</a></sup>
+        with a B.A. in Interdisciplinary Computing and the Arts.
+      <br><br>
     </div>
   </li>
   
