--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,15 +9,9 @@
         <h1 class="title">INFO</h1>
         <p class="description-container">
           Carter Duong is a designer, developer, and artist from 
-          the Bay Area <sup>(510 + 925)</sup> and based near Los Angeles (626). 
-          He recently graduated from UC San Diego with a B.A. 
-          in Interdisciplinary Computing and the Arts.
-          <br><br>
-          EMAIL
-          <br>
-          ARE.NA
-          <br>
-          TUMBLR   
+            the Bay Area<sup><a href="https://goo.gl/maps/cKExn6muhyq" target="_blank">1</a>+<a href="https://goo.gl/maps/VHi9HtWjcHs" target="_blank">2</a></sup> 
+            and based near Los Angeles<sup><a href="https://goo.gl/maps/NrSy197bgj22" target="_blank">3</a></sup>. He recently graduated from UC San Diego<sup><a href="https://goo.gl/maps/c4LcBHj2JUu" target="_blank">4</a></sup>
+            with a B.A. in Interdisciplinary Computing and the Arts.
         </p>
       </div>
       <div class="vertical-line"></div>
