--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,9 @@
 <div id="canvas-container"></div>
+
 <div class="projects-container">
   <!-- Landing -->
-  <div class="project INFO" id="landing">
+  <div class="project">
+      <div class="image-container" id="mobile-landing"></div> 
       <div class="text-container">
         <h1 class="title">INFO</h1>
         <p class="description-container">
