--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -26,12 +26,18 @@ a {
   color: white;
 }
 
+.clickable {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 /**** Accordion ****/
 .accordion {
   display: none;
 
   @media screen and (min-width: $break-medium) {
-    display: inline-block;
+    display: block;
     position: fixed;
     padding: 8vh 0 0 1vw;
     width: 15vw;
@@ -49,10 +55,6 @@ a {
 
 .accordion li label {
   color: $grey;
-
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 // hide content by default
@@ -101,7 +103,8 @@ a {
 /**** Folio ****/
 .folio { 
   position: fixed;
-
+  z-index: 9999999;
+  
   &#header {
     left: 1vw;
     top: 1vh;
@@ -137,12 +140,6 @@ a {
   .project {
     position: relative;
     margin: auto;
-    width: 50vw;
-  }
-
-  #landing {
-    display: flex;
-    height: 100vh;
     width: 50vw;
   }
 }
@@ -184,6 +181,11 @@ a {
   width: 98vw;
   height: 100vh;
 } 
+
+#mobile-landing {
+  height: 100vh;
+  width: 100vw;
+}
 
 .image-container {
   align-items: center;
