--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/jmz4hgy.css">
     <link rel="stylesheet" href="assets/css/main.css"/>
     <link rel="manifest" href="/manifest.webmanifest">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119274729-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119274729-2');
+    </script>
+
 </head>
