Refactor type css

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -44,7 +44,9 @@
         {{project.description}}
       </p>
     </div>
+    {% if forloop.last == false %}
     <div class="vertical-line"></div>
+    {% endif %}
   </div>
   {% endfor %}
 
