--- a/_scss/_type.scss
+++ b/_scss/_type.scss
@@ -7,7 +7,7 @@ html {
 
 h1 {
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   letter-spacing: -0.1rem;
   text-transform: uppercase;
 }
@@ -27,19 +27,16 @@ h1 {
   }
 }
 
+/*** Accordion ***/
+label {
+  text-transform: uppercase;
+}
+
 .content {
   font-size: .8rem;
   line-height: 1.1rem;
 }
+
 .meta-text {
-  text-transform: uppercase;
-}
-
-.header {
-  font-size: 1.8rem;
-  letter-spacing: -0.1rem;
-}
-
-label {
   text-transform: uppercase;
 }
