--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,7 +5,7 @@
       <div class="folio" id="header">⟡ Carter Duong</div>
       <div class="folio" id="contact"><a href="mailto:c@carterduong.com">Contact</a></div>
       <div class="folio" id="time">Updated 1/22/19</div>
-      <div class="folio clickable" id="easter-egg"></div>
+      <div class="folio clickable" id="easter-egg">All ways, always.</div>
 
       {% include accordion.html %}
       {% include projects.html %}
