--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,3 +1,5 @@
+{% assign imgix-url = "https://carterduong.imgix.net/" %}
+  
 <div id="canvas-container"></div>
 
 <div class="projects-container">
@@ -20,8 +22,8 @@
   {% for project in site.data.projects %}
   <div class="project {{project.title}}" id="{{forloop.index}}">
     <div class="image-container">
-        {% for image in project.images %}
-          <img src="{{image}}">
+        {% for image-url in project.images %}
+          <img src="{{image-url}}">
         {% endfor %}
         {% for gif in project.gifs %}
           <video src="{{gif}}" autoplay muted loop></video>
