--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
           <img src="{{image-url}}">
         {% endfor %}
         {% for gif in project.gifs %}
-          <video src="{{gif}}" autoplay playsinline muted loop></video>
+          <video muted autoplay loop src="{{gif}}"></video>
         {% endfor %}
     </div>
     <div class="text-container">
