--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
           <img src="{{image-url}}">
         {% endfor %}
         {% for gif in project.gifs %}
-          <video muted autoplay playsinline loop src="{{gif}}" type="video/mp4"></video>
+          <video muted autoplay playsinline loop oncanplay="this.muted=true" src="{{gif}}" type="video/mp4"></video>
         {% endfor %}
     </div>
     <div class="text-container">
