Add new poster + edit description

--- a/_includes/accordion.html
+++ b/_includes/accordion.html
@@ -5,7 +5,7 @@
     <input type="radio" name="projects-menu" id="info">
     <label for="info" class="clickable">Info</label>
     <div class="content">
-      Carter Duong is a designer, developer, and artist from 
+      Carter Duong is a designer and developer from 
         the Bay Area<sup><a href="https://goo.gl/maps/cKExn6muhyq" target="_blank">1</a>+<a href="https://goo.gl/maps/VHi9HtWjcHs" target="_blank">2</a></sup> 
         and based near Los Angeles<sup><a href="https://goo.gl/maps/NrSy197bgj22" target="_blank">3</a></sup>. He recently graduated from UC San Diego<sup><a href="https://goo.gl/maps/c4LcBHj2JUu" target="_blank">4</a></sup>
         with a B.A. in Interdisciplinary Computing and the Arts.
