--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
       <div class="text-container">
         <h1 class="title">INFO</h1>
         <p class="description-container">
-          Carter Duong is a designer, developer, and artist from 
+          Carter Duong is a designer and developer from 
             the Bay Area<sup><a href="https://goo.gl/maps/cKExn6muhyq" target="_blank">1</a>+<a href="https://goo.gl/maps/VHi9HtWjcHs" target="_blank">2</a></sup> 
             and based near Los Angeles<sup><a href="https://goo.gl/maps/NrSy197bgj22" target="_blank">3</a></sup>. He recently graduated from UC San Diego<sup><a href="https://goo.gl/maps/c4LcBHj2JUu" target="_blank">4</a></sup>
             with a B.A. in Interdisciplinary Computing and the Arts.
@@ -26,7 +26,7 @@
           <img src="{{image-url}}">
         {% endfor %}
         {% for gif in project.gifs %}
-          <video muted autoplay playsinline loop oncanplay="this.muted=true" src="{{gif}}" type="video/mp4"></video>
+          <video muted autoplay playsinline loop src="{{gif}}" type="video/mp4"></video>
         {% endfor %}
     </div>
     <div class="text-container">
