--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,9 +4,8 @@
     {% include head.html %}
     <body class="">
       <div class="folio" id="header">⟡ Carter Duong</div>
-      <div class="folio" id="contact"><a href="mailto:c@carterduong.com">Email</a></div>
+      <div class="folio" id="contact"><a href="mailto:c@carterduong.com">c@carterduong.com</a></div>
       <div class="folio" id="time">Updated 4/14/19</div>
-      <div class="folio clickable" id="easter-egg">All ways, always.</div>
 
       {% include accordion.html %}
       {% include projects.html %}
