Revise layout done

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,14 +1,10 @@
-<!-- Designed and developed by Carter Duong -->
+<!-- Sup -->
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
-    <body class="">
-      <div class="folio" id="header">⟡ Carter Duong</div>
-      <div class="folio" id="contact"><a href="mailto:c@carterduong.com">c@carterduong.com</a></div>
-      <div class="folio" id="time">Updated 4/14/19</div>
-
-      {% include accordion.html %}
-      {% include projects.html %}
+    <body class="fadeIn">
+      {% include images.html %}
+      {% include description.html %}
       {% include js.html %}
     </body>
 </html>
