--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,15 +1,14 @@
+<div>
 {% for project in site.data.projects %}
   <div class="bottom-text">
     <div class="text-container">
-      <h1 class="title-text">{{project.title}}</h1>
-      <p class="description-text">
+      <h1 class="title-text flex-element">
+        {{project.title}}
+      </h1>
+      <p class="description-text flex-element">
         {{project.description}}
       </p>
-      <p class="meta-text">
-        {%if project.link %}
-          {{project.link%}}
-          <br>
-        {%endif%}
+      <p class="meta-text flex-element">
         {%if project.role %}
           {{project.role}}
           <br>
@@ -18,8 +17,12 @@
           {{project.date}}
           <br>
         {%endif%}
+        {%if project.link %}
+          {{project.link%}}
+        {%endif%}
         {{project.collaborators}}
       </p>
     </div>
   </div>
 {% endfor %}
+</div>
