--- a/_includes/js.html
+++ b/_includes/js.html
@@ -6,4 +6,5 @@
 <script src="assets/js/renderers/Projector.js"></script>
 <script src="assets/js/renderers/CanvasRenderer.js"></script>
 <script src="assets/js/stats.min.js"></script>
+<script src="assets/js/OrbitControls.js"></script>
 <script src="assets/js/nurbs2.js"></script>
