--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,4 +1,5 @@
-$break-medium: 600px;
+$break-small: 600px;
+$break-medium: 800px;
 
 $white: #FFFFFF;
 $grey: #A9A9A9;
@@ -6,19 +7,6 @@ $grey: #A9A9A9;
 html {
   color: white;
   background-color: black;
-}
-
-h1 {
-  margin: 1rem 0 0 0;
-  padding: 0 3vh 0 3vh;
-
-  @media screen and (min-width: $break-medium) {
-    padding: 0 0 0 0;
-  }
-}
-
-p {
-  margin: 1rem 0 0 0;
 }
 
 a {
@@ -31,24 +19,8 @@ a {
   }
 }
 
-@keyframes pulse {
-  0% {
-    opacity: .3;
-    text-shadow: 0px 0px 5px white;
-  }
-  50% {
-    opacity: 1;
-    text-shadow: 0x 0px 5px white;
-  }
-  100% {
-    opacity: .3;
-    text-shadow: 0px 0px 5px white;
-  }
-}
-
 /**** Project Template ****/
 .project {
-
   @media screen and (min-width: $break-medium) {  
     position: relative;
     margin: auto;
@@ -69,8 +41,22 @@ a {
 .fadeOut {
   -webkit-animation: opacityUp 1s reverse;
   opacity: 1.0;
-  -webkit-opacity: 1.0;
-  
+  -webkit-opacity: 1.0; 
+}
+
+@keyframes pulse {
+  0% {
+    opacity: .3;
+    text-shadow: 0px 0px 5px white;
+  }
+  50% {
+    opacity: 1;
+    text-shadow: 0x 0px 5px white;
+  }
+  100% {
+    opacity: .3;
+    text-shadow: 0px 0px 5px white;
+  }
 }
 
 @-webkit-keyframes opacityUp {
@@ -93,14 +79,9 @@ a {
   top: 0;
   left: 0;
   z-index: -1;
-  width: 98vw;
-  height: 90vh;
+  width: 100vw;
+  height: 88vh;
 } 
-
-#mobile-landing {
-  height: 100vh;
-  width: 50vw;
-}
 
 .image-container {
   align-items: center;
@@ -146,11 +127,25 @@ a {
 
 .bottom-text {
   position: fixed;
-  height: 10vh;
   width: 100vw;
   bottom: 0;
+  left: 0;
   background-color: black;
   display: none;
+  height: 19vh;
+
+  @media screen and (min-width: 350px)  {
+    height: 15vh;
+  }
+  @media screen and (min-width: $break-small) {
+    height: 16vh;
+  }
+  @media screen and (min-width: $break-medium) {
+    height: 10rem;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 8.5rem;
+  }
 }
 
 .active {
@@ -159,33 +154,59 @@ a {
 }
 
 .text-container {
-  width: 80vw;
-  background-image: linear-gradient(to right, #ffffff 40%, #000000 20%);
-  background-position: top;
-  background-size: 20px 1px;
-  background-repeat: repeat-x;
-  opacity: 1;
-
+  border-top: solid 1px;
+  
+  width: 95vw;
   box-shadow: 0px -10px 10px black;
-
   display: flex;
   flex-direction: row; 
+
+  @media screen and (min-width: $break-small) {
+    width: 80vw;
+  }
+  @media screen and (min-width: $break-medium) {
+  }
+}
+
+.flex-element {
+  margin: 2vh 1vw 1vh 1vw;
+  
+  @media screen and (min-width: $break-small) {
+    margin: 2vh 1vw 1vh 1vw;
+  }
+  @media screen and (min-width: $break-medium) {
+    margin: 2vh .5vw 1vh .5vw;
+  }
 }
 
 .title-text {
-  flex: 2;
-  margin: 2vh .5vw 1vh .5vw;
   animation: pulse 3s infinite;
+  flex: 1;
+
+  @media screen and (min-width: $break-small) {
+  }
+  @media screen and (min-width: $break-medium) {
+    flex: 2;
+  }
 }
 
 .description-text {
- flex: 3;
- margin: 2vh .5vw 1vh .5vw;
+  flex: 2;
 
+  @media screen and (min-width: $break-small) {
+  }
+  @media screen and (min-width: $break-medium) {
+    flex: 3;
+  }
 }
 
 .meta-text {
-  flex: 2;
-  margin: 2vh .5vw 1vh 1vw;
+  flex: 1;
 
+  @media screen and (min-width: $break-small) {
+
+  }
+  @media screen and (min-width: $break-medium) {
+    flex: 2;
+  }
 }
