--- a/_scss/_type.scss
+++ b/_scss/_type.scss
@@ -1,10 +1,35 @@
+$break-small: 600px;
+$break-medium: 800px;
+
 html, h1, p {
   font-family: Helvetica, sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
-  font-size: 1.063em;
+  font-size: 0.6em;
+  line-height: 1.3rem;
+
+  @media screen and (min-width: 750px) {
+    font-size: 0.875em;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 1.063em;
+    line-height: 1.5rem;
+  }
+}
+
+sup {
+  vertical-align: baseline;
+  position: relative;
+  top: -0.4em;
 }
 
 .title-text {
-  text-align: right;
+  text-align: left;
+
+  @media screen and (min-width: 350px) {
+    text-align: right;
+  }
+  @media screen and (min-width: $break-medium) {
+    text-align: right;
+  }
 }
