Move url arrow to liquid

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -18,7 +18,10 @@
           <br>
         {%endif%}
         {%if project.link %}
-          {{project.link%}}
+          {%for link in project.link %}
+            {{link}}↗&#xFE0E;
+            <br>
+          {%endfor%}
         {%endif%}
         {{project.collaborators}}
       </p>
