--- a/_includes/description.html
+++ b/_includes/description.html
@@ -19,7 +19,7 @@
         {%endif%}
         {%if project.link %}
           {%for link in project.link %}
-            {{link}}↗&#xFE0E;
+            {{link}}
             <br>
           {%endfor%}
         {%endif%}
