Add manifest, adjust line thickness, add srcset/imgix

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,6 +1,7 @@
 <!-- yo yo -->
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="manifest" href="assets/site.webmanifest">
     {% include head.html %}
     <body class="fadeIn">
       {% include images.html %}
