--- a/_includes/images.html
+++ b/_includes/images.html
@@ -8,10 +8,12 @@
 <div class="project {{project.title}}" id="{{forloop.index}}">
   <div class="image-container">
       {% for image-url in project.images %}
-        <img src="{{local-url}}{{image-url}}"
-        srcset="{{imgix-url}}{{image-url}}?w=500 500w, {{imgix-url}}{{image-url}} 1000w"
-        size="100vw" 
+
+        <img src="{{imgix-url}}{{image-url}}"
+        srcset="{{imgix-url}}{{image-url}}?w=500 500w, {{imgix-url}}{{image-url}}?w=1000 1000w"
+        sizes="50vw"
         />
+
       {% endfor %}
       {% for gif in project.gifs %}
         <video muted autoplay playsinline loop src="{{local-url}}{{gif}}" type="video/mp4"></video>
