--- a/_scss/_type.scss
+++ b/_scss/_type.scss
@@ -1,5 +1,7 @@
-$break-small: 600px;
-$break-medium: 800px;
+$viewport-4: 600px;
+$viewport-7: 800px;
+$viewport-9: 992px;
+$viewport-12: 1200px;
 
 html, h1, p {
   font-family: Helvetica, sans-serif;
@@ -8,10 +10,16 @@ html, h1, p {
   font-size: 0.8em;
   line-height: 1.2rem;
 
-  @media screen and (min-width: 750px) {
+  @media screen and (min-width: $viewport-4) {
+
+  }
+  @media screen and (min-width: $viewport-7) {
     font-size: 0.875em;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $viewport-9) {
+    
+  }
+  @media screen and (min-width: $viewport-12) {
     font-size: 1.063em;
     line-height: 1.5rem;
   }
